--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -110,10 +110,20 @@ form#search-form #sbutton {
 }
 
 #title {
-    font-size: 30px;
-    text-align: center;
-    margin-top: -15px;
-    padding: 10px;
+  background-color: #ea5e2c;
+  color: transparent;
+  text-shadow: 0px 2px 3px rgba(255,255,255,0.4);
+  -webkit-background-clip: text;
+     -moz-background-clip: text;
+          background-clip: text;
+  text-align: left;
+  font-size:45px;
+  line-height: 50px;
+  font-weight:bold;
+  font-family:'Alegreya';
+  margin: 3px 0px 17px 0px;
+  text-align: center;
+
 }
 
 table.zebra {
